# spotify-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/spotify_mcp/: server.py  spotify_api.py  utils.py
