[project]
name = "spotify-mcp"
version = "0.3.0"
description = "Spotify MCP server for Claude - updated for Feb 2026 API changes"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
 "mcp==1.3.0",
 "python-dotenv>=1.0.1",
 "spotipy==2.24.0",
]
[[project.authors]]
name = "Varun Srivastava"
email = "varun.neal@berkeley.edu"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
]

[tool.uv.sources]
spotify-mcp = { workspace = true }

[project.scripts]
spotify-mcp = "spotify_mcp:main"
